fixed navabar disalignement on technical project page

--- a/styles/technical-projects.css
+++ b/styles/technical-projects.css
@@ -282,16 +282,16 @@ body {
 		margin: 50px;
 	}
 
-	h2 > a {
+	section > h2 > a {
 		text-decoration: none;
 		color: white;
 	}
-	h2 > a:hover {
+	section > h2 > a:hover {
 		-webkit-transition: border-color 0.9s ease;
 		transition: border-color 0.9s ease;
 	}
 
-	h2 > a:after {
+	section > h2 > a:after {
 		content: "";
 		display: block;
 		width: 0;
@@ -304,7 +304,7 @@ body {
 	p {
 		color: white;
 	}
-	h2 > a:hover::after {
+	section > h2 > a:hover::after {
 		width: 100%;
 		-webkit-transition: width 0.9s;
 		transition: width 0.9s;
